--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,9 +5,41 @@
     tools:context="com.example.android.alzmate.Model.CameraFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <LinearLayout
+        android:id="@+id/group_picture_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:weightSum="4"
+        android:padding="8dp"
+        android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/image_detect_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="4"
+        android:padding="8dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/camera_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Camera"
+            android:layout_weight="2"/>
+        <Button
+            android:id="@+id/identify_face_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Identify Face"
+            android:layout_weight="2"/>
+
+    </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
