--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.android.alzmate.Model.HomeFragment">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +17,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="55dp"
         android:layout_width="300dp"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="20dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
