--- a/app/src/main/res/layout/event_list_layout.xml
+++ b/app/src/main/res/layout/event_list_layout.xml
@@ -6,7 +6,7 @@
     android:padding="12dp">
     <TextView
         android:id="@+id/event_title_txt"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/nunito_semibold"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/event_body_text"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/event_title_txt"
         android:layout_marginLeft="16dp"
