--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="custom_fab">
+
+    <item name="android:background">@drawable/fab_lable_background</item>
+
+    <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
